[gd_scene load_steps=5 format=3 uid="uid://crx7lrqe7561"]

[ext_resource type="Script" path="res://LevelsContainer.gd" id="1_mayql"]
[ext_resource type="PackedScene" uid="uid://uo5jmwg10vix" path="res://UI/Header_Bar.tscn" id="2_dyl0d"]
[ext_resource type="PackedScene" uid="uid://b5fasbkcgoolp" path="res://UI/LevelUI.tscn" id="3_od0ia"]
[ext_resource type="Script" path="res://UI/SelectUI.gd" id="4_acxac"]

[node name="LevelsContainer" type="VBoxContainer"]
visible = false
script = ExtResource("1_mayql")

[node name="HeaderBar" parent="." instance=ExtResource("2_dyl0d")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="LevelUI" parent="." instance=ExtResource("3_od0ia")]
layout_mode = 2
size_flags_stretch_ratio = 7.0

[node name="SelectUI" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
script = ExtResource("4_acxac")

[node name="LevelContainer" type="VBoxContainer" parent="SelectUI"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
